user-select: auto (fix for typing on mobile devices)

--- a/ta_css/activity.css
+++ b/ta_css/activity.css
@@ -1,6 +1,6 @@
 * {
-  -moz-user-select: none;
-  -webkit-user-select: none;
+  -moz-user-select: auto;
+  -webkit-user-select: auto;
 }
 
 #main-toolbar #activity-button {
